syntax = "proto3";

option go_package = "gen/go/reports";

service ReportsService {
  rpc CreateZIPReports (CreateZIPReportsRequest) returns (CreateZIPReportsResponse);
  rpc CreateExcelReport (CreateExcelReportRequest) returns (CreateExcelReportResponse);
}

message CreateZIPReportsRequest {
  int32 month = 1;
  int32 year = 2;
}

message CreateZIPReportsResponse {
  string zip_path = 1;
}

message CreateExcelReportRequest {
  int64 owner_id = 1;
  int32 month = 2;
  int32 year = 3;
}

message CreateExcelReportResponse {
  string zip_path = 1;
}

